FileList - temp fix for overflowing text

--- a/client/src/panels/common/TextEditor/FileList.module.css
+++ b/client/src/panels/common/TextEditor/FileList.module.css
@@ -192,6 +192,10 @@
     font-size: 15px;
     padding-top: 2px;
     padding-bottom: 2px;
+    width: 0;
+    text-align: left;
+    min-width: 0;
+    flex: 1 1 auto;
 }
 
 .collapse-arrow{
